@@ -968,3 +968,8 @@ void CTAAirMoveType::DependentDied(CObject* o)
 	}
 	CMoveType::DependentDied(o);
 }
+
+void CTAAirMoveType::SetMaxSpeed(float speed)
+{
+	maxSpeed=speed;
+}
